--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   <h1> My Checkers Game </h1>
   <h2 class = "subtitle"> ~The Best Game Ever~ </h2>
-  <p> by Gregory Tomchuk </p>
+  <p> insert name </p>
     <div id="board" class = "cell">
       <div class = "cell" >
         <img src="red.jpg" />
